test/zinc_source/compile_errors/decorators/08_direct_missing_required_argument.zn
// expected-error: decorator 'needs_label' missing required argument 'label'
fn needs_label(f: (i64) -> i64, label: string) -> (i64) -> i64 {
    print(label)
    return f
}

@needs_label
fn value(x: i64) -> i64 {
    return x
}

fn main() {
    print(value(1))
}
